# facial_recognition

./: .gitignore  atividade_parte2.ipynb  box_cox_transformation.py  classifier.py  graphic.py  normalization.py  pyproject.toml  read_image.py  utils.py
